fix overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,7 +13,7 @@ body {
     sans-serif;
   font-size: 100%;
   margin: 0 auto;
-  overflow-y: hidden;
+  overflow: scroll;
 }
 .nav {
   margin-left: auto;
@@ -95,8 +95,7 @@ footer {
   padding: 5rem 3rem;
   position: absolute;
   width: 100%;
-  height: 1900px;
-  // margin-bottom: 0;
+  margin-bottom: 0;
 }
 .footer-inner {
   align-items: flex-start;
